Updates to navigation and ProductList

--- a/TestingStuff/Areas/Identity/Pages/Account/LogOut.cshtml
+++ b/TestingStuff/Areas/Identity/Pages/Account/LogOut.cshtml
@@ -8,6 +8,8 @@
         if (SignInManager.IsSignedIn(User))
         {
             await SignInManager.SignOutAsync();
+
+            return Redirect("~/");
         }
 
         return Redirect("~/");
