--- a/TestingStuff/Shared/NavMenu.razor
+++ b/TestingStuff/Shared/NavMenu.razor
@@ -1,26 +1,53 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@using Microsoft.AspNetCore.Identity;
+
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Inventory Managment</a>
+        <a class="navbar-brand" href="">Sklepik Adama</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
 </div>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="productList">
-                <span class="oi oi-dial" aria-hidden="true"></span> Product List
-            </NavLink>
-        </div>
-    </nav>
-</div>
+<AuthorizeView>
+ <Authorized>
+        <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+            <nav class="nav-item px-3">
+                <NavLink href="Identity/Account/Manage" class="nav-link">
+                    <span class="oi oi-person" aria-hidden="true"></span> Witaj @context.User.Identity?.Name!
+                </NavLink>
+                <NavLink href="/Account/LogOut" asp-route-returnUrl="/" method="post" class="nav-link btn btn-link">
+                    <span class="oi oi-account-logout" aria-hidden="true"></span> Wyloguj
+                </NavLink>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Strona Domowa
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="orders">
+                    <span class="oi oi-basket" aria-hidden="true"></span> Zamówienia
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="productList">
+                    <span class="oi oi-dial" aria-hidden="true"></span> Lista Produktów
+                </NavLink>
+            </div>
+        </nav>
+    </div>
+</Authorized>
+    <NotAuthorized>
+        <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Identity/Account/Login" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Zaloguj się
+                </NavLink>
+            </div>
+          </div>
+    </NotAuthorized>
+</AuthorizeView>
+
 
 @code {
     private bool collapseNavMenu = true;
